# AccelRC

./: .gitignore  .gitmodules  build.gradle
android-app/: build.gradle
android-app/app/: proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/kpmc/accelrc/activity/: IntentCodes.java
android-app/app/src/main/java/com/kpmc/accelrc/activity/debug/: AccelDebugActivity.java
android-app/app/src/main/java/com/kpmc/accelrc/activity/main/: RcStickMotionSensorListener.java  TextViewMotionSenorRawListener.java
android-app/app/src/main/java/com/kpmc/accelrc/activity/preferences/: PreferenceActivity.java  PreferenceFragment.java
android-app/app/src/main/java/com/kpmc/accelrc/android/logging/: LogHelper.java  LogcatClassTagLoggerImpl.java  Logger.java
android-app/app/src/main/java/com/kpmc/accelrc/core/motionsensor/: MotionSensorAxis.java  (+3 more)
android-app/app/src/main/java/com/kpmc/accelrc/dagger/: Accelerometer.java  ApplicationContext.java
android-app/app/src/main/res/layout/: activity_accel_debug.xml  activity_main.xml
android-app/app/src/main/res/menu/: menu_main.xml
android-app/app/src/main/res/values/: strings.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kpmc/accelrc/: AccelDebugActivity.java  AccelRCModule.java  BTTestThread.java
app/src/main/java/com/kpmc/accelrc/activity/debug/: AccelDebugActivity.java  BTTestThread.java
app/src/main/java/com/kpmc/accelrc/activity/main/: BluetoothStatusTextConnectionListener.java  MainActivity.java
app/src/main/java/com/kpmc/accelrc/application/: AccelRCApplication.java  ApplicationContext.java  DaggerUtil.java
app/src/main/java/com/kpmc/accelrc/core/: CoreModule.java
app/src/main/java/com/kpmc/accelrc/core/bluetooth/: BluetoothMotionSensorListener.java
app/src/main/java/com/kpmc/accelrc/core/motionsensor/: MotionSensor.java  MotionSensorImpl.java  MotionSensorPreferences.java  MotionSensorPreferencesImpl.java
app/src/main/java/com/kpmc/accelrc/dagger/: DaggerUtil.java
app/src/main/java/com/kpmc/accelrc/debug/: AccelDebugActivity.java  BTTestThread.java
app/src/main/java/com/kpmc/accelrc/preferences/: PreferenceActivity.java  PreferenceFragment.java
app/src/main/java/com/kpmc/accelrc/util/: VoidFunction.java
app/src/main/java/com/kpmc/accelrc/view/: RCStick.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: preferences.xml
controller-board/: .gitignore  CMakeLists.txt
controller-board/cmake/: arduino-1.6.cmake  avr-toolchain.cmake  download-nanopb.cmake
controller-board/src/: main.cpp
docs/: BT-Module.md
gradle/wrapper/: gradle-wrapper.properties
